[package]
name = "twitch-sui-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
log = "0.4.27"
serde = { version = "1.0.219", features = ["derive"] }
env_logger = "0.11.8"
serde_json = "1.0.140"
twitch-irc = "5.0.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"