[package]
name = "twitch-sui-oracle"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.45.1", features = ["rt", "rt-multi-thread", "macros"] }
dotenvy = "0.15.7"
reqwest = { version = "0.12.20", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sui_sdk = { git = "https://github.com/mystenlabs/sui", package = "sui-sdk" }
sui_config = { git = "https://github.com/mystenlabs/sui", package = "sui-config" }
sui_keys = { git = "https://github.com/mystenlabs/sui", package = "sui-keys" }
shared_crypto = { git = "https://github.com/mystenlabs/sui", package = "shared-crypto" }
twitch-irc = "5.0.1"
tracing-subscriber = "0.3.19"
tracing = "0.1.41"
deadpool-postgres = "0.14.1"
deadpool = "0.12.2"
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4", "with-uuid-1", "with-serde_json-1"] }
regex = "1.11.1"
anyhow = "1.0.98"
futures = "0.3.31"
bcs = "0.1.6"